<resources>
    <string name="app_name">Classbook</string>
    <string name="refresh_btn">Refresh!</string>
    <string name="test_placeholder">lol!</string>
    <string name="settings">Settings</string>
    <string name="action_activity_main">Homepage</string>
    <string name="action_activity_settings">Settings</string>
    <string name="error_message_unknown">Malformed Request</string>

    <!-- LOGIN Activity-->
    <string name="logo_alt_text">logo de classbook</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="old_password">Ancien mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="submit">CONNEXION</string>
    <string name="change">CHANGER</string>
    <string name="no_account">Pas encore de compte?</string>
    <string name="register">S\'ENREGISTRER</string>
    <string name="title_activity_side_panel">SidePanelActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Classbook</string>
    <string name="nav_header_subtitle_edition">Édition</string>
    <string name="nav_header_subtitle_consultation">Consultation</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Déconnexion</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_search">Consultation d\'étudiants</string>
    <string name="menu_register">Ajout</string>
    <string name="menu_settings">Paramètres</string>
    <string name="edition">Édition</string>

    <string name="searchTitle">Étudiants</string>
    <string name="sigle">Sigle du cours</string>
    <string name="note_hint">Note</string>
    <string name="code_hint">Matricule</string>
    <string name="last_name_hint">Nom</string>
    <string name="first_name_hint">Prénom</string>
    <string name="trimester_hint">Trimestre</string>
    <string name="bottomBtnTag">bottomBtn</string>
    <string name="gradedStudentTag">gradedStudent</string>
    <string name="ajouter_un_pdf">Ajouter un PDF</string>
    <string name="save_results">Enregistrer les résultats</string>
    <string name="menu_class_search">Consultation de cours</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_course_info">Continuer</string>
    <string name="course_name">Nom du cours</string>
    <string name="course_trimester">Trimestre du cours</string>
    <string name="register_course">Enregistrer un cours</string>
    <string name="welcome">Bienvenue,</string>
    <string name="edition_description">Vous avez un compte d\'édition. Ouvrez le menu sur le côté pour commencer!</string>
    <string name="consultation_description">Vous avez un compte de consultation. Ouvrez le menu sur le côté pour commencer!</string>
    <string name="consultation">Consultation</string>
    <string name="error_timeout">Petit problème de connexion au serveur, veuillez réessayer!</string>
    <string name="status_waiting">En attente d\'une réponse des mineurs...</string>
    <string name="error_auth">Le nom d\'usager et/ou le mot de passe est invalide</string>
    <string name="info_storage">L\'application utilise cette permission afin de lire et d\'enregistrer des fichiers PDFs sur votre appareil.</string>
    <string name="info_change_success">Le mot de passe a été changé avec succès.</string>
    <string name="error_change_fail">L\'ancien mot de passe est invalide</string>
    <string name="info_students_empty">Il n\'y a aucun élève dans le cours!</string>
    <string name="info_missing_data">Il manque des informations!</string>
    <string name="error_invalid_file">Le fichier sélectionné est invalide.</string>
    <string name="error_invalid_pdf">Veuillez choisir un fichier PDF valide!</string>
    <string name="error_invalid_code">Veuillez entrer un sigle valide!</string>
    <string name="info_course_success">Cours ajouté</string>
    <string name="error_invalid_permissions">Vous n\'avez pas les permissions requises</string>
    <string name="info_pdf_success">Les résultats de ce cours ont été téléversés dans vos dossiers.</string>
    <string name="error_invalid_grade">Veuillez entrer une note valide</string>
    <string name="error_no_internet">Une erreur est survenue, veuillez vérifier l\'état de votre connexion</string>
    <string name="error_general">Une erreur est survenue, veuillez réessayer</string>
    <string name="error_invalid_trimester">Veuillez entrer un trimestre valide!</string>
    <string name="empty_classes">Aucun cours dans la base de données</string>
</resources>
