<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.androidapp.fragments.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_search"
            android:name="com.example.androidapp.fragments.searchStudent.SearchStudentFragment"
            android:label="@string/menu_search"
            tools:layout="@layout/fragment_student_list" />

    <fragment
            android:id="@+id/nav_course_search"
            android:name="com.example.androidapp.fragments.searchCourse.SearchCourseFragment"
            android:label="@string/menu_class_search"
            tools:layout="@layout/fragment_course_list" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.androidapp.fragments.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
            android:id="@+id/nav_register"
            android:name="com.example.androidapp.fragments.register.GetCourseInfoFragment"
            android:label="@string/menu_register"
            tools:layout="@layout/fragment_register_list" />
</navigation>
