<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_school_black_24dp"
                android:title="@string/menu_search" />
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_cancel_black_24dp"
                android:title="@string/menu_logout" />
    </group>

    <item android:title="@string/edition">
        <menu>
            <item
                    android:id="@+id/nav_register"
                    android:icon="@drawable/ic_group_add_black_24dp"
                    android:title="@string/menu_register" />
        </menu>
    </item>

</menu>
