<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/student_bottom_panel"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="true"
    tools:context=".fragments.register.RegisterStudentBottomFragment"
    android:padding="20dp"
    android:background="@color/colorListBackground">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/code_hint"
            android:maxLength="7"
            android:inputType="number" />

        <EditText
            android:id="@+id/grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="6"
            android:hint="@string/note_hint"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/createStudentButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:tint="@color/colorAccent"
        app:srcCompat="@drawable/ic_add_box_black_24dp" />
</LinearLayout>
